# framework-js

./: .gitignore  Cargo.toml  README.md  links.txt  marko.d.ts  out.js  package.json  parsed  parsed-tsx  parsed-tsx copy  pnpm-lock.yaml  processed.js  run.sh  stuff.js  test-env.d.ts  test.tsx  transform-input.ts  tsconfig.json  visited-outputed.tsx
example/: index.tsx  out.js
how-to-parse/: 0-what-are-these.md  1-simple.md  2-calling-other-components.md  3-children.md
src/: main.rs  run.rs  tpl_wrapper.rs  transpiler.rs  utils.rs
src/commands/: mod.rs  testing.rs
src/commands/typecheck/: command.rs  common.rs  mod.rs  visitor.rs
src/specs/: type_info.rs
src/utils/: mod.rs  path.rs  stringify.rs  style.rs
test/: component.js  component.tsx  impl.js  input.js  output.js  package.json  server.js  test.js  test.jsx  typecheck.tsx
