[package]
name = "framework-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
swc = "0.273.3"
swc_core = { version = "0.90.*", features = ["ecma_plugin_transform"] }
swc_common = "0.33.17"
swc_ecma_ast = "0.112.2"
swc_ecma_parser = "0.143.3"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
lazy_static = "1.4.0"
num-traits = "0.2.18"
ring = "0.17.8"
bincode = "2.0.0-rc.3"
